--- a/biome.json
+++ b/biome.json
@@ -31,6 +31,6 @@
     }
   },
   "files": {
-    "ignore": ["dist/**", "node_modules/**", ".wxt/**"]
+    "ignore": ["dist/**", "node_modules/**", ".wxt/**", "builds/**", ".output/**"]
   }
 }
